// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box default 1`] = `
.c0 {
  box-sizing: border-box;
}

<div>
  <div
    className="c0"
  />
</div>
`;

exports[`Box is flex 1`] = `
.c0 {
  box-sizing: border-box;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c1 {
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  box-sizing: border-box;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
}

.c3 {
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
}

.c6 {
  box-sizing: border-box;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  box-sizing: border-box;
  justify-self: center;
}

.c8 {
  box-sizing: border-box;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-sizing: border-box;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
  <div
    className="c6"
  />
  <div
    className="c7"
  />
  <div
    className="c8"
  />
  <div
    className="c9"
    order="2"
  />
</div>
`;

exports[`Box with border 1`] = `
.c0 {
  box-sizing: border-box;
  border: 1px solid #ffdd59;
}

.c1 {
  box-sizing: border-box;
  border: 1px solid #012345;
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  />
</div>
`;

exports[`Box with color background 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #ffdd59;
}

.c1 {
  box-sizing: border-box;
  background-color: #012345;
}

.c2 {
  box-sizing: border-box;
  background-color: cyan;
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  />
  <div
    className="c2"
  />
</div>
`;

exports[`Box with image background 1`] = `
.c0 {
  box-sizing: border-box;
  background-image: url('https://picsum.photos/128');
}

<div>
  <div
    className="c0"
  />
</div>
`;

exports[`Box with margin 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0.375rem;
}

.c1 {
  box-sizing: border-box;
  margin: 32px;
}

.c2 {
  box-sizing: border-box;
  margin: 5%;
}

.c3 {
  box-sizing: border-box;
  margin-top: 0.375rem;
}

.c4 {
  box-sizing: border-box;
  margin-top: 32px;
}

.c5 {
  box-sizing: border-box;
  margin-top: 5%;
}

.c6 {
  box-sizing: border-box;
  margin-left: 0.375rem;
}

.c7 {
  box-sizing: border-box;
  margin-left: 32px;
}

.c8 {
  box-sizing: border-box;
  margin-left: 5%;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 0.375rem;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 5%;
}

.c12 {
  box-sizing: border-box;
  margin-right: 0.375rem;
}

.c13 {
  box-sizing: border-box;
  margin-right: 32px;
}

.c14 {
  box-sizing: border-box;
  margin-right: 5%;
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
  <div
    className="c6"
  />
  <div
    className="c7"
  />
  <div
    className="c8"
  />
  <div
    className="c9"
  />
  <div
    className="c10"
  />
  <div
    className="c11"
  />
  <div
    className="c12"
  />
  <div
    className="c13"
  />
  <div
    className="c14"
  />
</div>
`;

exports[`Box with overflow 1`] = `
.c0 {
  box-sizing: border-box;
  overflow: hidden;
}

<div>
  <div
    className="c0"
    overflow="hidden"
  />
</div>
`;

exports[`Box with padding 1`] = `
.c0 {
  box-sizing: border-box;
  padding: 0.375rem;
}

.c1 {
  box-sizing: border-box;
  padding: 32px;
}

.c2 {
  box-sizing: border-box;
  padding: 5%;
}

.c3 {
  box-sizing: border-box;
  padding-top: 0.375rem;
}

.c4 {
  box-sizing: border-box;
  padding-top: 32px;
}

.c5 {
  box-sizing: border-box;
  padding-top: 5%;
}

.c6 {
  box-sizing: border-box;
  padding-left: 0.375rem;
}

.c7 {
  box-sizing: border-box;
  padding-left: 32px;
}

.c8 {
  box-sizing: border-box;
  padding-left: 5%;
}

.c9 {
  box-sizing: border-box;
  padding-bottom: 0.375rem;
}

.c10 {
  box-sizing: border-box;
  padding-bottom: 32px;
}

.c11 {
  box-sizing: border-box;
  padding-bottom: 5%;
}

.c12 {
  box-sizing: border-box;
  padding-right: 0.375rem;
}

.c13 {
  box-sizing: border-box;
  padding-right: 32px;
}

.c14 {
  box-sizing: border-box;
  padding-right: 5%;
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
  <div
    className="c6"
  />
  <div
    className="c7"
  />
  <div
    className="c8"
  />
  <div
    className="c9"
  />
  <div
    className="c10"
  />
  <div
    className="c11"
  />
  <div
    className="c12"
  />
  <div
    className="c13"
  />
  <div
    className="c14"
  />
</div>
`;

exports[`Box with position 1`] = `
.c0 {
  box-sizing: border-box;
  position: relative;
}

.c1 {
  box-sizing: border-box;
  top: 0.375rem;
}

.c2 {
  box-sizing: border-box;
  top: 32px;
}

.c3 {
  box-sizing: border-box;
  top: 5%;
}

.c4 {
  box-sizing: border-box;
  left: 0.375rem;
}

.c5 {
  box-sizing: border-box;
  left: 32px;
}

.c6 {
  box-sizing: border-box;
  left: 5%;
}

.c7 {
  box-sizing: border-box;
  bottom: 0.375rem;
}

.c8 {
  box-sizing: border-box;
  bottom: 32px;
}

.c9 {
  box-sizing: border-box;
  bottom: 5%;
}

.c10 {
  box-sizing: border-box;
  right: 0.375rem;
}

.c11 {
  box-sizing: border-box;
  right: 32px;
}

.c12 {
  box-sizing: border-box;
  right: 5%;
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  />
  <div
    className="c2"
  />
  <div
    className="c3"
  />
  <div
    className="c4"
  />
  <div
    className="c5"
  />
  <div
    className="c6"
  />
  <div
    className="c7"
  />
  <div
    className="c8"
  />
  <div
    className="c9"
  />
  <div
    className="c10"
  />
  <div
    className="c11"
  />
  <div
    className="c12"
  />
</div>
`;

exports[`Box with shadow 1`] = `
.c0 {
  box-sizing: border-box;
  box-shadow: 0 3px 6px rgba(0,0,0,0.08),0 3px 6px rgba(0,0,0,0.11);
}

.c1 {
  box-sizing: border-box;
  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
}

<div>
  <div
    className="c0"
  />
  <div
    className="c1"
  />
</div>
`;

exports[`Box with size 1`] = `
.c0 {
  box-sizing: border-box;
  width: 32px;
  height: 32px;
}

.c1 {
  box-sizing: border-box;
  width: 64px;
  height: 64px;
}

.c2 {
  box-sizing: border-box;
  width: 5%;
  height: 5%;
}

.c3 {
  box-sizing: border-box;
  width: 32px;
}

.c4 {
  box-sizing: border-box;
  width: 64px;
}

.c5 {
  box-sizing: border-box;
  width: 5%;
}

.c6 {
  box-sizing: border-box;
  height: 32px;
}

.c7 {
  box-sizing: border-box;
  height: 64px;
}

.c8 {
  box-sizing: border-box;
  height: 5%;
}

.c9 {
  box-sizing: border-box;
  min-width: 1px;
}

.c10 {
  box-sizing: border-box;
  min-width: 64px;
}

.c11 {
  box-sizing: border-box;
  min-width: 5%;
}

.c12 {
  box-sizing: border-box;
  min-height: 1px;
}

.c13 {
  box-sizing: border-box;
  min-height: 64px;
}

.c14 {
  box-sizing: border-box;
  min-height: 5%;
}

.c15 {
  box-sizing: border-box;
  max-width: 1px;
}

.c16 {
  box-sizing: border-box;
  max-width: 32px;
}

.c17 {
  box-sizing: border-box;
  max-width: 5%;
}

.c18 {
  box-sizing: border-box;
  max-height: 1px;
}

.c19 {
  box-sizing: border-box;
  max-height: 32px;
}

.c20 {
  box-sizing: border-box;
  max-height: 5%;
}

<div>
  <div
    className="c0"
    size="sm"
  />
  <div
    className="c1"
    size={64}
  />
  <div
    className="c2"
    size="5%"
  />
  <div
    className="c3"
    width="sm"
  />
  <div
    className="c4"
    width={64}
  />
  <div
    className="c5"
    width="5%"
  />
  <div
    className="c6"
    height="sm"
  />
  <div
    className="c7"
    height={64}
  />
  <div
    className="c8"
    height="5%"
  />
  <div
    className="c9"
  />
  <div
    className="c10"
  />
  <div
    className="c11"
  />
  <div
    className="c12"
  />
  <div
    className="c13"
  />
  <div
    className="c14"
  />
  <div
    className="c15"
  />
  <div
    className="c16"
  />
  <div
    className="c17"
  />
  <div
    className="c18"
  />
  <div
    className="c19"
  />
  <div
    className="c20"
  />
</div>
`;

exports[`Box with z-index 1`] = `
.c0 {
  box-sizing: border-box;
  z-index: 1;
}

<div>
  <div
    className="c0"
  />
</div>
`;
